[project]
name = "cypher-tck-runner"
version = "0.1.0"
description = "openCypher TCK test runner using Behave"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.2.6",
    "polars>=0.20.0",
    "parse>=1.20.0",
    "parse-type>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cypher_tck"]

[tool.uv]
exclude-newer = "2099-01-01"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parse_type.*"
ignore_missing_imports = true
